# mcp-prompt-optimizer

./: .gitignore  CLAUDE.md  README.md  advanced_strategies.py  domain_templates.py  examples.py  install.sh  prompt_optimizer.py  pyproject.toml  setup_claude_desktop.sh  setup_interactive.py  test.sh
ai_docs/: CLAUDE_DESKTOP_GUIDE.md  EXAMPLES.md  README.md  RESEARCH.md  setup_interactive.py  test_advanced.py  test_advanced.sh
